# indra

./: .gitignore  Cargo.toml  README.md
client/collator/: Cargo.toml
client/consensus/aura/: Cargo.toml
client/consensus/aura/src/: import_queue.rs  lib.rs
client/consensus/common/: Cargo.toml
client/consensus/common/src/: lib.rs
client/consensus/relay-chain/: Cargo.toml
client/network/: Cargo.toml
client/network/src/: wait_on_relay_chain_block.rs
client/pov-recovery/: Cargo.toml
client/pov-recovery/src/: lib.rs
client/service/: Cargo.toml
client/service/src/: lib.rs
docker/: Dockerfile  build.sh
indra-parachain/common/: Cargo.toml
indra-parachain/node/: Cargo.toml
indra-parachain/node/res/: parachain-indra.json
indra-parachain/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
indra-parachain/pallets/custom-signatures/: Cargo.toml
indra-parachain/parachains-common/src/: impls.rs
indra-parachain/runtime/: Cargo.toml
indra-parachain/runtime/src/: constants.rs  evm_config.rs  lib.rs  precompiles.rs
indra-parachain/runtime/src/weights/: pallet_assets.rs  pallet_balances.rs  pallet_collator_selection.rs  pallet_multisig.rs  pallet_proxy.rs  pallet_session.rs  pallet_timestamp.rs  pallet_uniques.rs  pallet_utility.rs
node/: Cargo.toml  build.rs
node/res/: indracore.json  indranet.json  parachain-indra.json  selendra-testnet.json
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs  shell_upgrade.rs
pallets/asset-tx-payment/: Cargo.toml
pallets/aura-ext/: Cargo.toml
pallets/aura-ext/src/: lib.rs
pallets/custom-signatures/: Cargo.toml
pallets/custom-signatures/src/: tests.rs
pallets/dmp-queue/: Cargo.toml
pallets/dmp-queue/src/: lib.rs
pallets/identitysel/: Cargo.toml
pallets/identitysel/src/: lib.rs  tests.rs  types.rs
pallets/parachain-info/: Cargo.toml
pallets/parachain-system/: Cargo.toml
pallets/parachain-system/src/: lib.rs
pallets/subscription/: Cargo.toml
pallets/subscription/src/: lib.rs  tests.rs  weights.rs
pallets/vesting/: Cargo.toml
pallets/vesting/src/: lib.rs  mock.rs  tests.rs
pallets/xcm/: Cargo.toml
pallets/xcmp-queue/: Cargo.toml
primitive/: Cargo.toml
primitive/src/: impls.rs  lib.rs
primitives/core/: Cargo.toml
primitives/parachain-inherent/: Cargo.toml
primitives/parachain-inherent/src/: client_side.rs  lib.rs
primitives/timestamp/: Cargo.toml
primitives/utility/: Cargo.toml
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: impls.rs  lib.rs
runtime/indracore/: Cargo.toml
runtime/indracore/src/: constants.rs  evm_config.rs  lib.rs  precompiles.rs  xcm_config.rs
runtime/indracore/src/configurations/: evm_config.rs  mod.rs  xcm_config.rs
runtime/indracore/src/constants/: mod.rs  precompiles.rs
runtime/indranet/: Cargo.toml
runtime/indranet/src/: constants.rs  evm_config.rs  lib.rs  precompiles.rs  xcm_config.rs
runtime/indranet/src/configurations/: evm_config.rs  xcm_config.rs
runtime/indranet/src/constants/: mod.rs  precompiles.rs
runtime/indranet/src/weights/: mod.rs  pallet_vesting.rs
runtime/src/: constants.rs  lib.rs
scripts/docker/: Dockerfile  build.sh
vendors/ethereum/: Cargo.toml
vendors/ethereum/src/: transaction.rs
vendors/evm/: Cargo.toml
vendors/evm/core/src/: error.rs
vendors/evm/src/: lib.rs
vendors/frontier/client/consensus/: Cargo.toml
vendors/frontier/client/db/: Cargo.toml
vendors/frontier/client/db/src/: lib.rs  utils.rs
vendors/frontier/client/mapping-sync/: Cargo.toml
vendors/frontier/client/rpc/: Cargo.toml
vendors/frontier/client/rpc-core/src/types/: block_number.rs  filter.rs  transaction.rs  transaction_request.rs
vendors/frontier/client/rpc/src/: eth.rs  eth_pubsub.rs  lib.rs
vendors/frontier/client/rpc/src/overrides/: mod.rs  schema_v1_override.rs  schema_v2_override.rs  schema_v3_override.rs
vendors/frontier/frame/base-fee/: Cargo.toml
vendors/frontier/frame/base-fee/src/: lib.rs
vendors/frontier/frame/dynamic-fee/: Cargo.toml
vendors/frontier/frame/ethereum/: Cargo.toml
vendors/frontier/frame/ethereum/src/: lib.rs  mock.rs
vendors/frontier/frame/ethereum/src/tests/: eip1559.rs  eip2930.rs  legacy.rs
vendors/frontier/frame/evm/: Cargo.toml
vendors/frontier/frame/evm/precompile/blake2/: Cargo.toml
vendors/frontier/frame/evm/precompile/bn128/: Cargo.toml
vendors/frontier/frame/evm/precompile/bn128/src/: lib.rs
vendors/frontier/frame/evm/precompile/curve25519/: Cargo.toml
vendors/frontier/frame/evm/precompile/dispatch/: Cargo.toml
vendors/frontier/frame/evm/precompile/dispatch/src/: lib.rs
vendors/frontier/frame/evm/precompile/ed25519/: Cargo.toml
vendors/frontier/frame/evm/precompile/modexp/: Cargo.toml
vendors/frontier/frame/evm/precompile/modexp/src/: lib.rs
vendors/frontier/frame/evm/precompile/sha3fips/: Cargo.toml
vendors/frontier/frame/evm/precompile/sha3fips/src/: lib.rs
vendors/frontier/frame/evm/precompile/simple/: Cargo.toml
vendors/frontier/frame/evm/precompile/simple/src/: lib.rs
vendors/frontier/frame/evm/src/: lib.rs  tests.rs
vendors/frontier/frame/evm/test-vector-support/src/: lib.rs
vendors/frontier/primitives/consensus/: Cargo.toml
vendors/frontier/primitives/consensus/src/: lib.rs
vendors/frontier/primitives/evm/: Cargo.toml
vendors/frontier/primitives/rpc/: Cargo.toml
vendors/frontier/primitives/self-contained/: Cargo.toml
vendors/frontier/primitives/self-contained/src/: checked_extrinsic.rs  unchecked_extrinsic.rs
