[package]
name = "selendra-collator"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "selendra-collator"
path = "src/main.rs"

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.3.0" }
structopt = "0.3.3"
serde = { version = "1.0.132", features = ["derive"] }
hex-literal = "0.2.1"
async-trait = "0.1.42"

# Parachain runtimes
indracore-runtime = { path = "../runtime/indracore" }
indranet-runtime = { path = "../runtime/indranet" }
parachains-common = { path = "../runtime/common" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

# try-runtime stuff.
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

# RPC related dependencies
jsonrpc-core = "18.0.0"
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

# Cumulus dependencies
cumulus-client-cli = {  git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
cumulus-client-consensus-aura = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
cumulus-client-consensus-common = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
cumulus-client-service = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
cumulus-client-network = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
cumulus-primitives-core = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
cumulus-relay-chain-interface = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
cumulus-relay-chain-local = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }

# Selendra dependencies
selendra-primitives = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
selendra-service = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
selendra-cli = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
selendra-parachain = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }
xcm = { git = "https://github.com/selendra/selendrachain", branch = "mainnet" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
tempfile = "3.2.0"

[features]
default = []
runtime-benchmarks = [
	"selendra-service/runtime-benchmarks",
	"indracore-runtime/runtime-benchmarks",
	"indranet-runtime/runtime-benchmarks",
]
try-runtime = [
	'indracore-runtime/try-runtime',
	'indranet-runtime/try-runtime',
]
