[package]
name = "selendra-collator"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "selendra-collator"
path = "src/main.rs"

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "2.3.0" }
clap = { version = "3.1.2", features = ["derive"] }
serde = { version = "1.0.132", features = ["derive"] }
hex-literal = "0.3.4"
async-trait = "0.1.42"

# Parachain runtimes
indracore-runtime = { path = "../runtime/indracore" }
indranet-runtime = { path = "../runtime/indranet" }
parachains-common = { path = "../runtime/common" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

# try-runtime stuff.
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

# RPC related dependencies
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

# Cumulus dependencies
cumulus-client-cli = {  git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
cumulus-client-consensus-aura = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
cumulus-client-consensus-common = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
cumulus-client-service = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
cumulus-client-network = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
cumulus-primitives-core = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
cumulus-relay-chain-interface = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
cumulus-relay-chain-local = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }

# Selendra dependencies
selendra-primitives = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
selendra-service = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
selendra-cli = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
selendra-parachain = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }
xcm = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.2" }

# Frontier dependencies
fc-consensus = { path = "../vendors/frontier/client/consensus" }
fp-consensus = { path = "../vendors/frontier/primitives/consensus" }
fc-rpc-core = { path = "../vendors/frontier/client/rpc-core" }
fc-rpc = { path = "../vendors/frontier/client/rpc", features = ["rpc_binary_search_estimate"] }
fp-rpc = { path = "../vendors/frontier/primitives/rpc" }
fc-db = { path = "../vendors/frontier/client/db" }
fc-mapping-sync = { path = "../vendors/frontier/client/mapping-sync" }
pallet-evm = { path = "../vendors/frontier/frame/evm" }
pallet-ethereum = { path = "../vendors/frontier/frame/ethereum" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

[dev-dependencies]
assert_cmd = "2.0"
nix = "0.23"
tempfile = "3.2.0"

[features]
default = []
runtime-benchmarks = [
	"selendra-service/runtime-benchmarks",
	"indracore-runtime/runtime-benchmarks",
	"indranet-runtime/runtime-benchmarks",
]
try-runtime = [
	'indracore-runtime/try-runtime',
	'indranet-runtime/try-runtime',
]
