[package]
name = "node-primitives"
version = "0.1.0"
authors = ["Selendra info@selendra.org"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.3.0', features = ['derive'], default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

frame-executive = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.14", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }

pallet-asset-tx-payment = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.14", default-features = false }
pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.14", default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.14", default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.14", default-features = false }
pallet-collator-selection = { git = "https://github.com/selendra/selendrachain", branch = "main", default-features = false }

sp-std = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.14", default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.14", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.14", default-features = false }

selendra-runtime-common = { git = "https://github.com/selendra/selendrachain", branch = "main", default-features = false }
selendra-primitives = { git = "https://github.com/selendra/selendrachain", branch = "main", default-features = false }
xcm = { git = "https://github.com/selendra/selendrachain", branch = "main", default-features = false }
xcm-executor = { git = "https://github.com/selendra/selendrachain", branch = "main", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-system/std",
	"frame-support/std",
	'pallet-asset-tx-payment/std',
	'pallet-collator-selection/std',
	'pallet-assets/std',
	'pallet-authorship/std',
	'pallet-balances/std',
	'sp-std/std',
	'sp-io/std',
	"sp-core/std",
	"sp-runtime/std",
	"sp-consensus-aura/std",
	'selendra-runtime-common/std',
	'selendra-primitives/std',
	# "xcm/std",
	# "xcm-executor/std",
]