[package]
name = "indra-runtime"
version = "0.1.0"
authors = ["Selendra info@selendra.org"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14" }

[dependencies]
hex-literal = { version = '0.3.1', optional = true }
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive"]}
log = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
smallvec = "1.6.1"

# Substrate Dependencies
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }

## Substrate FRAME Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false, optional = true }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.14" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }

## Substrate Pallet Dependencies
pallet-asset-tx-payment = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.14", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.14", default-features = false }

# Selendra Dependencies
pallet-xcm = { git = "https://github.com/selendra/selendrachain", branch = "main", default-features = false }
selendra-parachain = { git = "https://github.com/selendra/selendrachain", branch = "main", default-features = false }
selendra-runtime-common = { git = "https://github.com/selendra/selendrachain", branch = "main", default-features = false }
xcm = { git = "https://github.com/selendra/selendrachain", branch = "main", default-features = false  }
xcm-builder = { git = "https://github.com/selendra/selendrachain", branch = "main", default-features = false }
xcm-executor = { git = "https://github.com/selendra/selendrachain", branch = "main", default-features = false }

cumulus-pallet-aura-ext = { git = 'https://github.com/selendra/selendrachain', branch = 'main', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/selendra/selendrachain', branch = 'main', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/selendra/selendrachain', branch = 'main', default-features = false }
cumulus-pallet-xcm = { git = 'https://github.com/selendra/selendrachain', branch = 'main', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/selendra/selendrachain', branch = 'main', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/selendra/selendrachain', branch = 'main', default-features = false }
cumulus-primitives-timestamp = { git = 'https://github.com/selendra/selendrachain', branch = 'main', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/selendra/selendrachain', branch = 'main', default-features = false }
pallet-collator-selection = { git = 'https://github.com/selendra/selendrachain', branch = 'main', default-features = false }
parachain-info = { git = 'https://github.com/selendra/selendrachain', branch = 'main', default-features = false }
cumulus-pallet-session-benchmarking = { git = 'https://github.com/selendra/selendrachain', branch = 'main', default-features = false }

node-primitives = { path = "../primitive", default-features = false }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"serde",
	"scale-info/std",
	"log/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-asset-tx-payment/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-uniques/std",
	"pallet-utility/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-pallet-dmp-queue/std",
	"node-primitives/std",
	"parachain-info/std",
	"selendra-parachain/std",
	"selendra-runtime-common/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	'hex-literal',
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	'cumulus-pallet-session-benchmarking/runtime-benchmarks',
]
