[package]
name = "indra-node"
version = "0.2.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }

[[bin]]
name = "indra"
path = "src/main.rs"

[features]
runtime-benchmarks = ["indra-runtime/runtime-benchmarks"]

[dependencies]
derive_more = "0.99.2"
async-trait = "0.1.42"
log = "0.4.14"
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.8"
futures = { version = "0.3.1", features = ["compat"] }
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.3.1"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"

# Local Dependencies
indra-runtime = { path = "../runtime" }
parachains-common = { path = "../common"}

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", features = ["wasmtime"]  }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }

# Cumulus dependencies
cumulus-client-cli = { path = "../../client/cli" }
cumulus-client-collator = { path = "../../client/collator" }
cumulus-client-consensus-aura = { path = "../../client/consensus/aura" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }
cumulus-client-consensus-relay-chain = { path = "../../client/consensus/relay-chain" }

# Selendra dependencies
selendra-cli = { git = "https://github.com/selendra/selendrachain", branch = "selendrav2" }
selendra-parachain = { git = "https://github.com/selendra/selendrachain", branch = "selendrav2" }
selendra-primitives = { git = "https://github.com/selendra/selendrachain", branch = "selendrav2" }
selendra-service = { git = "https://github.com/selendra/selendrachain", branch = "selendrav2" }

# Frontier dependencies
fc-consensus = { path = "../../vendors/frontier/client/consensus" }
fp-consensus = { path = "../../vendors/frontier/primitives/consensus" }
fc-rpc-core = { path = "../../vendors/frontier/client/rpc-core" }
fc-rpc = { path = "../../vendors/frontier/client/rpc", features = ["rpc_binary_search_estimate"] }
fp-rpc = { path = "../../vendors/frontier/primitives/rpc" }
fc-db = { path = "../../vendors/frontier/client/db" }
fc-mapping-sync = { path = "../../vendors/frontier/client/mapping-sync" }
pallet-evm = { path = "../../vendors/frontier/frame/evm" }
pallet-ethereum = { path = "../../vendors/frontier/frame/ethereum" }